correcting contrast error

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -39,6 +39,7 @@ nav {
 
 .current-date {
 	justify-content: center;
+	color: white;
 }
 
 #hamButton {
